[metadata]
name = Memento Mori Client
version = attr: mm.__version__.__version__
description = Memento Mori Game API Client & Utilities
url = https://github.com/brellorand/memento-mori-client
license = Apache 2.0
license_files = LICENSE
long_description = file: readme.rst
long_description_content_type = text/x-rst
author = Brellor / Lorand
author_email = brellorand@gmail.com
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12

[options]
include_package_data = True
packages = find:
package_dir = = lib
python_requires = >=3.11
install_requires =
    cli_command_parser
    colored
    msgpack
    requests
    UnityPy

[options.packages.find]
where = lib
